--- a/index.css
+++ b/index.css
@@ -1,21 +1,55 @@
+html body {
+  margin: 0;
+  padding: 0;
+}
+
 h1 {
     background-color: black;
     color: white;
     font-family: serif;
     text-align: center;
-    margin-top: 0%;
-    padding-top: 0%;
+    margin: 0;
+    padding: 0;
 }
 
 p {
   background-color: slategray;
   color: azure;
+  margin: 0;
 }
 
-.nav {
-   color: cadetblue;
-
+/*---nav styles---*/
+ ul {
+   border: 1px solid grey;
+   list-style: none;
+   background-color: black;
+   margin: 0;
+   padding: 0;
 }
+ li {
+   text-align: center;
+   border-bottom: 1px solid grey;
+   font-size: 1.2em;
+ }
+
+ li a {
+ display: block;
+ text-decoration: none;
+ color: white;
+ }
+
+ li a:last-child {
+   border: none;
+ }
+
+ footer {
+   position: fixed;
+   bottom: 0;
+   text-align: center;
+   display: block;
+   width: 100%;
+   margin: 0;
+ }
 /*---------
 media querys
 ---------*/
