--- a/index.css
+++ b/index.css
@@ -3,6 +3,9 @@ html body {
   padding: 0;
 }
 
+img {
+  width: 100%;
+}
 h1 {
     background-color: black;
     color: white;
@@ -16,6 +19,7 @@ p {
   background-color: slategray;
   color: azure;
   margin: 0;
+  background-image: url(images/Stars\ in\ the\ sky.jpg);
 }
 
 /*---nav styles---*/
