--- a/index.css
+++ b/index.css
@@ -3,9 +3,17 @@ html body {
   padding: 0;
 }
 
-img {
+/*img {
   width: 100%;
+}*/
+header {
+  display: flex;
+  background-color: black;
+  justify-content: space-between;
+  padding: 0 .5em;
+  align-items: center;
 }
+
 h1 {
     background-color: black;
     color: white;
@@ -19,21 +27,27 @@ p {
   background-color: slategray;
   color: azure;
   margin: 0;
-  background-image: url(images/Stars\ in\ the\ sky.jpg);
+  
 }
 
 /*---nav styles---*/
- ul {
+ nav {
+  flex: 1 1 70%;
+  text-align: right;
+ }
+
+ul {
    border: 1px solid grey;
    list-style: none;
    background-color: black;
    margin: 0;
    padding: 0;
+   background-image: url(images/Stars\ in\ the\ sky.jpg);
 }
  li {
    text-align: center;
    border-bottom: 1px solid grey;
-   font-size: 1.2em;
+   font-size: 1.4em;
  }
 
  li a {
@@ -54,6 +68,17 @@ p {
    width: 100%;
    margin: 0;
  }
-/*---------
-media querys
----------*/
+/*--media querys--*/
+
+@media (min-width: 750px) {
+  h1 {
+    text-align: left;
+  }
+  li {
+    display: inline-block;
+    text-align: right;
+    overflow: hidden;
+    vertical-align: top;
+    
+  }
+}
