--- a/index.css
+++ b/index.css
@@ -16,9 +16,24 @@ h1 {
     margin: 0;
     padding: 0;
 }
+h2 {
+  display: flex;
+  font-family: serif;
+  justify-content: center;
+}
+
+img {
+ border-radius: 10px;
+ display: block;
+ margin-left: auto;
+ margin-right: auto;
+ width: 80%;
+ max-height: 80%;
+}
 
 p {
   margin: 0;
+  display: flex;
 }
 
 /*---nav styles---*/
@@ -55,12 +70,13 @@ li a:last-child {
 }
 
 footer {
-   position: fixed;
+   position: static;
    bottom: 0;
    text-align: center;
    display: block;
    width: 100%;
    margin: 0;
+   background-color: cornflowerblue;
 }
 
 
