--- a/index.css
+++ b/index.css
@@ -21,15 +21,16 @@ h2 {
   display: flex;
   font-family: serif;
   justify-content: center;
-  margin-top: 0;
-  padding: 0;
-  color: white;
+  margin: 0;
+  padding: 0 0 15px 0;
+  color: black;
 }
 
 
 p {
   margin: 0;
   display: flex;
+  padding: 0;
 }
 
 /*---nav styles---*/
@@ -85,6 +86,22 @@ footer {
   justify-content: center;
   align-items: center;
   height: 200px;
+  width: 100%;
+}
+
+.top {
+  background-color:red;
+  width: 100%;
+}
+
+.about {
+  background-color:green;
+  width: 100%;
+}
+
+.tickets {
+  background-color: powderblue;
+  width: 100%;
 }
 
 
@@ -121,6 +138,16 @@ footer {
 
   li {
     margin: 0 5px 0 5px;
+  }
+
+  .flex-container{
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .top {
+    width: 50%;
+    justify-self: left;
   }
 }
 
