--- a/about.css
+++ b/about.css
@@ -55,14 +55,20 @@ li a:last-child {
 }
 
 footer {
-   position: static;
-   bottom: 0;
-   text-align: center;
-   display: block;
-   width: 100%;
-   margin: 0;
+  bottom: 0;
+  display: block;
+  width: 100%;
+  text-align: center;
+  margin: 0;
+  color: white;
+  background-color: black;
 }
 
+footer > p{
+ text-align: center;
+ width: 100%;
+ display: block;
+}
 
 * {box-sizing:border-box}
 
