--- a/about.css
+++ b/about.css
@@ -19,6 +19,15 @@ h1 {
 
 p {
   margin: 0;
+  color: white;
+  display: block;
+  padding: 15px 5px;
+  max-width: 100%;
+  text-align: center;
+}
+
+main {
+  background-color: black;
 }
 
 /*---nav styles---*/
@@ -74,7 +83,7 @@ footer > p{
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 750px;
   position: relative;
   margin: auto;
 }
@@ -114,7 +123,8 @@ footer > p{
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
+  color: white;
+  background-color: black;
   font-size: 15px;
   padding: 8px 12px;
   position: absolute;
@@ -198,6 +208,10 @@ footer > p{
 
   li {
     margin: 0 5px 0 5px;
+  }
+
+  p {
+    text-align: left;
   }
 }
 
