--- a/about.css
+++ b/about.css
@@ -80,7 +80,7 @@ footer > p{
 }
 
 * {box-sizing:border-box}
-
+/*--not all my code did edit for adding text background--*/
 /* Slideshow container */
 .slideshow-container {
   max-width: 750px;
